--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "knex": "^2.4.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -26,6 +27,7 @@
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
     "@types/lodash": "^4.14.192",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
